feat：业务错误统一捕获，ai功能健壮性修改