@@ -7,15 +7,21 @@ import com.example.orchardai.dto.AiWorkCreateDto;
 import com.example.orchardai.dto.AiWorkQuery;
 import com.example.orchardai.dto.AiWorkUpdateDto;
 import com.example.orchardai.dto.AiWorkVo;
+import com.example.orchardai.dto.ImageItem;
 import com.example.orchardai.entity.AiWork;
 import com.example.orchardai.enums.WorkStatusEnum;
 import com.example.orchardai.mapper.AiWorkMapper;
 import com.example.orchardai.service.AiWorkService;
 import com.example.orchardcommon.business.SnowflakeId.BizCodeEnum;
 import com.example.orchardcommon.business.SnowflakeId.SnowflakeUtils;
+import com.example.orchardcommon.exception.BizException;
 import com.example.orchardcommon.result.PageResult;
+import com.example.orchardfile.config.CosConfig;
+import com.example.orchardfile.service.FileUploadService;
+import com.example.orchardfile.vo.FileUploadVo;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -26,6 +32,7 @@ import org.springframework.web.context.request.ServletRequestAttributes;
 
 import java.time.LocalDateTime;
 import java.time.ZoneId;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
@@ -35,6 +42,10 @@ import java.util.Map;
 public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> implements AiWorkService {
 
     private final ObjectMapper objectMapper;
+
+    private final FileUploadService fileUploadService;
+
+    private final CosConfig cosConfig;
 
     @Override
     public AiWorkVo create(AiWorkCreateDto dto) {
@@ -58,6 +69,14 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
             }
         }
 
+        if (dto.getOriginImageList() != null) {
+            try {
+                work.setOriginImageList(objectMapper.writeValueAsString(dto.getOriginImageList()));
+            } catch (JsonProcessingException e) {
+                log.error("序列化originImageList失败", e);
+            }
+        }
+
         save(work);
         return toVo(work);
     }
@@ -66,7 +85,7 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
     public AiWorkVo getDetail(Long id) {
         AiWork work = getById(id);
         if (work == null) {
-            throw new RuntimeException("作品不存在");
+            throw new BizException("作品不存在");
         }
         return toVo(work);
     }
@@ -92,21 +111,21 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
     public void delete(Long id) {
         AiWork work = getById(id);
         if (work == null) {
-            throw new RuntimeException("作品不存在");
+            throw new BizException("作品不存在");
         }
         ServletRequestAttributes attributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
         Long userId = (Long) attributes.getRequest().getAttribute("userId");
         if (!work.getUserId().equals(userId)) {
-            throw new RuntimeException("无权删除该作品");
+            throw new BizException("无权删除该作品");
         }
         removeById(id);
     }
 
     @Override
-    public void update(Long id, AiWorkUpdateDto dto) {
+    public AiWorkVo update(Long id, AiWorkUpdateDto dto) {
         AiWork work = getById(id);
         if (work == null) {
-            throw new RuntimeException("作品不存在");
+            throw new BizException("作品不存在");
         }
         if (dto.getResultUrl() != null) {
             work.setResultUrl(dto.getResultUrl());
@@ -116,10 +135,27 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
         }
         if (dto.getDataList() != null) {
             try {
-                work.setDataList(objectMapper.writeValueAsString(dto.getDataList()));
+                for (ImageItem item : dto.getDataList()) {
+                    if (!StringUtils.hasText(item.getUrl())) {
+                        throw new BizException("dataList中图片url不能为空");
+                    }
+                    // 非本系统COS地址：服务端自动抓取并转存到COS，避免外部链接失效，省去"先上传再修改"的两步调用
+                    if (!isCosUrl(item.getUrl())) {
+                        FileUploadVo uploadVo = fileUploadService.uploadFileByUrl(item.getUrl(), null, work.getUserId(), null);
+                        item.setUrl(uploadVo.getFileUrl());
+                    }
+                    // id缺失自动生成，保证每条数据都有文件标识
+                    if (item.getId() == null) {
+                        item.setId(SnowflakeUtils.nextId(BizCodeEnum.WORK_IMAGE));
+                    }
+                }
+                // 追加模式：新图片拼接在已有图片之后，而不是整表覆盖
+                List<ImageItem> merged = parseImageList(work.getDataList());
+                merged.addAll(dto.getDataList());
+                work.setDataList(objectMapper.writeValueAsString(merged));
                 // 自动将最后一张设为resultUrl
-                if (!dto.getDataList().isEmpty()) {
-                    work.setResultUrl(dto.getDataList().get(dto.getDataList().size() - 1));
+                if (!merged.isEmpty()) {
+                    work.setResultUrl(merged.getLast().getUrl());
                 }
             } catch (JsonProcessingException e) {
                 log.error("序列化dataList失败", e);
@@ -127,16 +163,17 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
         }
         work.setUpdateTime(LocalDateTime.now());
         updateById(work);
+        return toVo(work);
     }
 
     @Override
     public void updateStatus(Long id, WorkStatusEnum status) {
         AiWork work = getById(id);
         if (work == null) {
-            throw new RuntimeException("作品不存在");
+            throw new BizException("作品不存在");
         }
         if (status.getCode() == work.getStatus()) {
-            throw new RuntimeException("已是当前状态");
+            throw new BizException("已是当前状态");
         }
         work.setStatus(status.getCode());
         work.setOperationData(null); //清空待操作的数据
@@ -148,7 +185,7 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
     public void updateStatusWithOperationData(Long id, WorkStatusEnum status, Object operationData) {
         AiWork work = getById(id);
         if (work == null) {
-            throw new RuntimeException("作品不存在");
+            throw new BizException("作品不存在");
         }
         work.setStatus(status.getCode());
         work.setUpdateTime(LocalDateTime.now());
@@ -163,6 +200,35 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
         }
 
         updateById(work);
+    }
+
+    /**
+     * 解析作品已存的图片列表（兼容旧版纯URL字符串格式），解析失败返回空列表
+     */
+    private List<ImageItem> parseImageList(String dataListJson) {
+        if (!StringUtils.hasText(dataListJson)) {
+            return new ArrayList<>();
+        }
+        try {
+            return objectMapper.readValue(dataListJson, new TypeReference<List<ImageItem>>() {});
+        } catch (JsonProcessingException e) {
+            log.error("解析已有图片数据失败，按空列表处理：{}", dataListJson, e);
+            return new ArrayList<>();
+        }
+    }
+
+    /**
+     * 判断URL是否为当前系统的腾讯云COS地址（本系统已上传的图片无需再次转存）
+     */
+    private boolean isCosUrl(String url) {
+        if (!StringUtils.hasText(url)) {
+            return false;
+        }
+        String defaultHost = cosConfig.getBucket() + ".cos." + cosConfig.getRegion() + ".myqcloud.com";
+        if (url.contains(defaultHost)) {
+            return true;
+        }
+        return StringUtils.hasText(cosConfig.getDomain()) && url.startsWith(cosConfig.getDomain());
     }
 
     private AiWorkVo toVo(AiWork work) {
@@ -183,12 +249,36 @@ public class AiWorkServiceImpl extends ServiceImpl<AiWorkMapper, AiWork> impleme
         }
         vo.setResultUrl(work.getResultUrl());
 
-        // 解析结果数据列表
+        // 解析结果数据列表（兼容旧数据：元素为纯URL字符串）
         if (work.getDataList() != null) {
             try {
-                vo.setDataList(objectMapper.readValue(work.getDataList(), new TypeReference<List<String>>() {}));
+                JsonNode node = objectMapper.readTree(work.getDataList());
+                if (node.isArray()) {
+                    List<ImageItem> items = new ArrayList<>();
+                    for (JsonNode n : node) {
+                        ImageItem item;
+                        if (n.isTextual()) {
+                            // 旧数据：纯URL字符串
+                            item = new ImageItem();
+                            item.setUrl(n.asText());
+                        } else {
+                            item = objectMapper.treeToValue(n, ImageItem.class);
+                        }
+                        items.add(item);
+                    }
+                    vo.setDataList(items);
+                }
             } catch (JsonProcessingException e) {
                 log.error("反序列化dataList失败", e);
+            }
+        }
+
+        // 解析原图数据列表
+        if (work.getOriginImageList() != null) {
+            try {
+                vo.setOriginImageList(objectMapper.readValue(work.getOriginImageList(), new TypeReference<List<ImageItem>>() {}));
+            } catch (JsonProcessingException e) {
+                log.error("反序列化originImageList失败", e);
             }
         }
 
